maze.lessons.maze.island.IslandMaze.scala.error
Escaper:40: error: not found: value setFirection
			setFirection(Direction.NORTH)
                        ^